<!--
  ~     This program is free software: you can redistribute it and/or modify
  ~     it under the terms of the GNU General Public License as published by
  ~     the Free Software Foundation, either version 3 of the License, or
  ~     (at your option) any later version.
  ~
  ~     This program is distributed in the hope that it will be useful,
  ~     but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~     MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~     GNU General Public License for more details.
  ~
  ~     You should have received a copy of the GNU General Public License
  ~     along with this program.  If not, see <http://www.gnu.org/licenses/>.
  -->

<resources>
    <string name="app_name">Calm</string>

    <string name="hello_world_title">Hey!</string>
    <string name="hello_world_content">Calm is now active.
        \n\nSpotify ads will have a slightly lower volume. This will <b>NOT</b> skip or silence the ads. To disable, just uninstall.
        \n\nHere\'s an advertisement: (you love those, right?)
    </string>
    <string name="not_working_title">Still getting loud ads?</string>
    <string name="spotify_broadcast_setting_screenshot_desc">A screenshot of the \"Device Broadcast Status\" setting in Stpotify set to On</string>
    <string name="not_working_content">Make sure \"Device Broadcast Status\" is enabled in the Spotify settings:</string>
    <string name="notif_title">Lowering volume during ad</string>
    <string name="notif_text">Tap to reset to normal volume</string>
    <string name="not_working_footer">Can\'t get it to work even after enabling broadcast?</string>
    <string name="get_help_button">Get more help</string>
    <string name="error_screenshot">That\'s just a screenshot. You have to do this in the real Spotify app.</string>
    <string name="setting_alt_muting">Alternative adjustment method (AudioFocus)</string>

    <string name="banner_ad_unit_id" translatable="false">ca-app-pub-6233465935680335/8454125202</string>
</resources>
